--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.0",
         "playwright": "^1.54.1",
+        "sharp": "^0.34.3",
         "zod": "^3.25.76"
     },
     "devDependencies": {
         "@types/node": "^24.1.0",
+        "@types/sharp": "^0.31.1",
         "@typescript-eslint/eslint-plugin": "^8.38.0",
         "@typescript-eslint/parser": "^8.38.0",
         "eslint": "^9.32.0",
