--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "format": "prettier --write \"src/**/*.ts\" \"*.json\" \"*.js\"",
         "format:check": "prettier --check \"src/**/*.ts\" \"*.json\" \"*.js\"",
         "lint": "eslint \"src/**/*.ts\"",
-        "lint:fix": "eslint \"src/**/*.ts\" --fix"
+        "lint:fix": "eslint \"src/**/*.ts\" --fix",
+        "check": "npm run lint && npm run format:check && npm run build"
     },
     "keywords": [
         "mcp",
@@ -33,8 +34,6 @@
         "@typescript-eslint/eslint-plugin": "^8.38.0",
         "@typescript-eslint/parser": "^8.38.0",
         "eslint": "^9.32.0",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-prettier": "^5.5.3",
         "prettier": "^3.6.2",
         "tsx": "^4.20.3",
         "typescript": "^5.8.3"
