--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tcehjaava/websight",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Web browsing capabilities for AI agents via MCP",
     "main": "dist/index.js",
     "type": "module",
@@ -16,7 +16,8 @@
         "lint": "eslint \"src/**/*.ts\"",
         "lint:fix": "eslint \"src/**/*.ts\" --fix",
         "check": "npm run lint && npm run format:check && npm run build",
-        "prepublishOnly": "npm run check"
+        "prepublishOnly": "npm run check",
+        "postinstall": "playwright install chromium"
     },
     "keywords": [
         "mcp",
