--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@tcehjaava/webinteractiontools",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Web browsing capabilities for AI agents via MCP",
     "main": "dist/index.js",
     "type": "module",
     "bin": {
-        "webinteractiontools": "./dist/index.js"
+        "webinteractiontools": "dist/index.js"
     },
     "publishConfig": {
         "access": "public"
@@ -50,6 +50,7 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.0",
+        "@tcehjaava/webinteractiontools": "^0.1.3",
         "playwright": "^1.54.1",
         "sharp": "^0.34.3",
         "zod": "^3.25.76"
